--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="contenedor-pausa">
             <div class="pausa-content">Paused</div>
-            <button class="pausa-content" onclick="continuar()">Continue</button>
+            <button class="pausa-content" onclick="setTimeout(continuar, 1000)">Continue</button>
             <button class="retry" class="ausa-content" onclick="retry()">Retry</button>
         </div>
     </div>
